Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3.17
-
None
Description
MDEV-18899 was fixed in MariaDB 10.3.14, but a user is seeing a similar crash in MariaDB 10.3.17:
190914 2:59:31 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.3.17-MariaDB-log
|
key_buffer_size=67108864
|
read_buffer_size=131072
|
max_used_connections=1007
|
max_threads=10002
|
thread_count=1006
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 22055066 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x7f72e4060568
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f758aba0d30 thread_stack 0x40000
|
*** buffer overflow detected ***: /usr/sbin/mysqld terminated
|
======= Backtrace: =========
|
/lib64/libc.so.6(__fortify_fail+0x37)[0x7f85c6774677]
|
/lib64/libc.so.6(+0x1167f2)[0x7f85c67727f2]
|
/lib64/libc.so.6(+0x1185d7)[0x7f85c67745d7]
|
/usr/sbin/mysqld(my_addr_resolve+0xda)[0x562d950486da]
|
/usr/sbin/mysqld(my_print_stacktrace+0x1c2)[0x562d95031ad2]
|
/usr/sbin/mysqld(handle_fatal_signal+0x30f)[0x562d94ad12af]
|
/lib64/libpthread.so.0(+0xf680)[0x7f85c83be680]
|
/usr/sbin/mysqld(_ZN5Field33set_warning_truncated_wrong_valueEPKcS1_+0x1b)[0x562d94ac48eb]
|
/usr/sbin/mysqld(_ZN13Field_longstr23check_string_copy_errorEPK13String_copierPKcPK15charset_info_st+0x97)[0x562d94ac5437]
|
/usr/sbin/mysqld(_ZN15Field_varstring5storeEPKcmPK15charset_info_st+0x79)[0x562d94ac5949]
|
/usr/sbin/mysqld(_Z36read_statistics_for_tables_if_neededP3THDP10TABLE_LIST+0xbf1)[0x562d9496f2d1]
|
/usr/sbin/mysqld(_Z20open_and_lock_tablesP3THDRK14DDL_options_stP10TABLE_LISTbjP19Prelocking_strategy+0x9d)[0x562d9489d6cd]
|
/usr/sbin/mysqld(+0x4bcbd8)[0x562d94804bd8]
|
/usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x33f2)[0x562d948f6432]
|
/usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x22b)[0x562d948fbc2b]
|
/usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1c9f)[0x562d948fe80f]
|
/usr/sbin/mysqld(_Z10do_commandP3THD+0x13e)[0x562d948ff74e]
|
/usr/sbin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x221)[0x562d949d2f61]
|
/usr/sbin/mysqld(handle_one_connection+0x3d)[0x562d949d302d]
|
/lib64/libpthread.so.0(+0x7dd5)[0x7f85c83b6dd5]
|
/lib64/libc.so.6(clone+0x6d)[0x7f85c675ab3d]
|
Attachments
Issue Links
- relates to
-
MDEV-18899 Server crashes in Field::set_warning_truncated_wrong_value
-
- Closed
-