sql/sql_statistics.cc
@@ -1153,12 +1153,14 @@ public:
           case COLUMN_STAT_MIN_VALUE:
 	    table_field->read_stats->min_value->set_notnull();
             stat_field->val_str(&val);
+            DBUG_ASSERT(table_field->read_stats->min_value->is_stat_field);
             table_field->read_stats->min_value->store(val.ptr(), val.length(),
                                                       &my_charset_bin);
             break;
           case COLUMN_STAT_MAX_VALUE:
 	    table_field->read_stats->max_value->set_notnull();
             stat_field->val_str(&val);
+            DBUG_ASSERT(table_field->read_stats->min_value->is_stat_field);
             table_field->read_stats->max_value->store(val.ptr(), val.length(),
                                                       &my_charset_bin);
             break;
@@ -2045,7 +2047,7 @@ void create_min_max_statistical_fields_for_table_share(THD *thd,
         Field *fld;
         Field *table_field= *field_ptr;
         my_ptrdiff_t diff= record - table_share->default_values;
-        if (!(fld= table_field->clone(&stats_cb->mem_root, diff)))
+        if (!(fld= table_field->clone(&stats_cb->mem_root, NULL, diff, TRUE)))
           continue;
         if (i == 0)
           table_field->read_stats->min_value= fld;
